# diet-app

./: Cargo.toml  README.md
src/: app.rs  args.rs  cmds.rs  csv.rs  dataframe.rs  main.rs
src/csv/: weight_data.csv
